--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "turtleme",
   "version": "0.1.0",
-  "description": "Platform for turtles to fund creatives and devs.",
+  "description": "A virtual marketplace for creatives to sell and buy services with TurtleCoin. ",
   "main": "www/bin",
   "scripts": {
     "start": "node bin/www",
