--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "turtleme",
   "version": "0.1.0",
-  "description": "A virtual marketplace for creatives to sell and buy services with TurtleCoin. ",
+  "description": "A virtual marketplace for creatives to sell and buy services with TurtleCoin.",
   "main": "www/bin",
   "scripts": {
     "start": "node bin/www",
@@ -41,6 +41,7 @@
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
