--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "helmet": "^3.15.0",
-    "knex": "^0.16.1",
+    "knex": "^0.16.2",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
     "morgan": "^1.9.1",
@@ -51,7 +51,7 @@
     "serve-favicon": "^2.5.0",
     "speakeasy": "^2.0.0",
     "standard": "^12.0.1",
-    "ts-api-js": "^0.1.0",
+    "ts-api-js": "git+ssh://git@github.com/trtl-services/ts-api-js.git",
     "uuid": "^3.3.2"
   }
 }
