--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-validator": "^5.3.0",
     "helmet": "^3.15.0",
     "knex": "^0.16.2",
+    "marked": "^0.5.2",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
     "morgan": "^1.9.1",
