--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "turtleme",
+  "name": "swanson-world",
   "version": "0.1.0",
   "description": "A virtual marketplace for creatives to sell and buy services with TurtleCoin.",
   "main": "www/bin",
